--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                         <img src="./4.png" alt="">
                         <div class="overlay"></div>
                         <div class="cards-content">
-                            <h3 class="card-title">Deluxe Room-2</h3>
+                            <h3 class="card-title">kkkk</h3>
                             <a href="#" class="buttom buttom-small">
                                 Check Rates
                             </a>
