--- a/index.html
+++ b/index.html
@@ -100,6 +100,17 @@
                         </div>
 
                     </div>
+                    <div class="rooms-cards">
+                        <img src="./4.png" alt="">
+                        <div class="overlay"></div>
+                        <div class="cards-content">
+                            <h3 class="card-title">kkkk-2</h3>
+                            <a href="#" class="buttom buttom-small">
+                                Check Rates
+                            </a>
+                        </div>
+
+                    </div>
 
                 </div>
 
